--- a/css/default.css
+++ b/css/default.css
@@ -65,10 +65,11 @@ ul{
 }
 
 .w3-button{
-	margin:1em;
 	background-color: var(--buttonColor);
 	border-radius: 4px;
 	color:var(--secondaryText);
+	font-size:16px;
+	font-family:'Roboto Mono', monospace;
 }
 .w3-button:hover{
 	background-color: var(--buttonColorHover);
@@ -81,7 +82,7 @@ ul{
 .s1{
 	background-color:var(--mainColor);
     height:100vh;
-	overflow:visible;
+	overflow:auto;
 }
 
 /*** Containers and Wrappers ***/
@@ -104,6 +105,7 @@ ul{
 	align-items:center;
 
 	padding-top:3em;
+	padding-bottom: 3em;
 	padding-right:var(--wrapperPaddingSides);
 	padding-left:var(--wrapperPaddingSides);
 	
@@ -182,7 +184,7 @@ ul{
 	align-items:stretch;
 
 	padding-top:3em;
-	padding-bottom:3em;
+	padding-bottom:12em;
 	padding-right:var(--wrapperPaddingSides);
 	padding-left:var(--wrapperPaddingSides);
 	text-align:center;
