--- a/css/default.css
+++ b/css/default.css
@@ -180,7 +180,7 @@ ul{
 .project-container{
 	display:flex;
 	flex-wrap:wrap;
-	justify-content: space-between;
+	justify-content: center;
 	align-items:stretch;
 
 	padding-top:3em;
