--- a/css/default.css
+++ b/css/default.css
@@ -1,233 +1,292 @@
-:root{
-	--mainColor:#112D3B;
-	--secondaryColor:#34707A;
-
-	--borderColor:#A1C2B6;
-
-	--mainText:#C2BB8F;
-	--secondaryText:#B7BEA2;
-
+:root {
+	--mainColor: #112D3B;
+	--secondaryColor: #34707A;
+	--borderColor: #A1C2B6;
+	--mainText: #C2BB8F;
+	--secondaryText: #B7BEA2;
 	--wrapperPaddingSides: 10%;
-
-	--cardColor:#15394b;
-
-	--buttonColor:#446677;
-	--buttonColorHover:#6998af;
+	--cardColor: #15394b;
+	--buttonColor: #446677;
+	--buttonColorHover: #6998af;
 }
 
-html, body{
-    padding:0;
-	margin:0;
-	scroll-behavior:smooth;
+html, body {
+	padding: 0;
+	margin: 0;
+	scroll-behavior: smooth;
 }
 
 /*** Items ***/
-h1, h2, h3, h4, h5, h6, strong{
-	color:var(--mainText);
-	font-family:'Russo One', sans-serif;
-	font-weight:500;
-}
-h1{font-size:56px;}
-h2{font-size:36px;}
-h3{font-size:28px;}
-h4{font-size:24px;}
-h5{font-size:20px;}
-h6{font-size:16px;}
 
-p, li, span, label, input, textarea{
-	color:var(--secondaryText);
-	font-family:'Roboto Mono', monospace;
-	text-align:left;
+h1, h2, h3, h4, h5, h6, strong {
+	color: var(--mainText);
+	font-family: 'Russo One', sans-serif;
+	font-weight: 500;
 }
 
-a{
-	text-decoration:none;
-	color:#17a2b8;
-}
-a:hover{
-	color:#84bec7;
+h1 {
+	font-size: 56px;
 }
 
-ul{
-	list-style:square;
-	color:var(--secondaryText);
-	font-family:'Roboto Mono', monospace;
-	text-align:left;
+h2 {
+	font-size: 36px;
 }
 
-.card{
+h3 {
+	font-size: 28px;
+}
+
+h4 {
+	font-size: 24px;
+}
+
+h5 {
+	font-size: 20px;
+}
+
+h6 {
+	font-size: 16px;
+}
+
+p, li, span, label, input, textarea {
+	color: var(--secondaryText);
+	font-family: 'Roboto Mono', monospace;
+	text-align: left;
+}
+
+a {
+	text-decoration: none;
+	color: #17a2b8;
+}
+
+a:hover {
+	color: #84bec7;
+}
+
+ul {
+	list-style: square;
+	color: var(--secondaryText);
+	font-family: 'Roboto Mono', monospace;
+	text-align: left;
+}
+
+.card {
 	background-color: var(--cardColor);
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.3s;
 }
-.card:hover{
+
+.card:hover {
 	box-shadow: 0 0 2em 1em rgba(0, 140, 186, 0.5);
 }
 
-.w3-button{
+@media(max-width: 1119px) {
+	.button {
+		margin-top: 1em;
+	}
+}
+
+.button {
 	background-color: var(--buttonColor);
 	border-radius: 4px;
-	color:var(--secondaryText);
-	font-size:16px;
-	font-family:'Roboto Mono', monospace;
+	color: var(--secondaryText);
+	font-size: 16px;
+	font-family: 'Roboto Mono', monospace;
 }
-.w3-button:hover{
+
+.button:hover {
 	background-color: var(--buttonColorHover);
 }
-.w3-button:focus{
+
+.button:focus {
+	outline: none;
+}
+
+.tab {
+	background-color: var(--cardColor);
+	border: none;
+	border-left: 2px solid var(--mainColor);
+	border-right: 2px solid var(--mainColor);
+	border-bottom: 4px solid var(--mainColor);
+	color: var(--secondaryText);
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 16px;
+}
+
+.tab:hover {
+	background-color: var(--secondaryColor);
+}
+
+.tab:focus {
 	outline: none;
 }
 
 /*** Section ***/
-.s1{
-	background-color:var(--mainColor);
-    height:100vh;
-	overflow:auto;
+
+.s1 {
+	background-color: var(--mainColor);
+	height: 100vh;
+	overflow: auto;
 }
 
 /*** Containers and Wrappers ***/
-@media(max-width: 1134px){
-	.intro-container .title-wrapper{
+
+@media(max-width: 1119px) {
+	.intro-container .title-wrapper {
 		order: 1
 	}
-	.intro-container .image-wrapper{
+	.intro-container .image-wrapper {
 		order: 2;
 	}
-	.intro-container .paragraph-wrapper{
+	.intro-container .paragraph-wrapper {
 		order: 3
 	}
 }
 
-.intro-container{
-	display:flex;
-	flex-wrap:wrap;
+.intro-container {
+	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
-	align-items:center;
-
-	padding-top:3em;
+	align-items: center;
+	padding-top: 3em;
 	padding-bottom: 3em;
-	padding-right:var(--wrapperPaddingSides);
-	padding-left:var(--wrapperPaddingSides);
-	
+	padding-right: var(--wrapperPaddingSides);
+	padding-left: var(--wrapperPaddingSides);
 }
-.intro-container .title-wrapper{
-	flex: 2;
-	flex-basis:100%;
 
-	margin-top:3em;
-	margin-bottom:3em;
-	margin-right:10%;
-	margin-left:10%;
+.intro-container .title-wrapper {
+	flex: 2;
+	flex-basis: 100%;
+	margin-top: 3em;
+	margin-bottom: 3em;
+	margin-right: 10%;
+	margin-left: 10%;
 }
-.intro-container .title-wrapper h1, p{
-	text-align:left;
+
+.intro-container .title-wrapper h1, p {
+	text-align: left;
 }
-.intro-container .paragraph-wrapper{
+
+.intro-container .paragraph-wrapper {
 	flex: 2;
 	min-width: 50%;
 }
-#intro-card{
-	min-width:50%;
 
-	padding-top:2em;
-	padding-bottom:3em;
-	padding-right:4em;
-	padding-left:4em;
+#intro-card {
+	min-width: 50%;
+	padding-top: 2em;
+	padding-bottom: 3em;
+	padding-right: 4em;
+	padding-left: 4em;
 }
-.intro-container .image-wrapper{
+
+.intro-container .image-wrapper {
 	flex: 1;
-
-	margin-top:3em;
-	margin-bottom:3em;
-	margin-right:1em;
-	margin-left:1em;
+	margin-top: 3em;
+	margin-bottom: 3em;
+	margin-right: 1em;
+	margin-left: 1em;
 }
-.intro-container .image-wrapper img{
-	filter: grayscale(50%);
-	width:18em;
 
+.intro-container .image-wrapper img {
+	filter: grayscale(50%);
+	width: 18em;
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
 }
-.intro-container .image-wrapper img:hover{
+
+.intro-container .image-wrapper img:hover {
 	filter: grayscale(0);
 	box-shadow: 0 0 2em 1em rgba(0, 140, 186, 0.5);
 }
 
-.experience-wrapper{
-	padding-top:3em;
-	padding-bottom:3em;
-	padding-right:var(--wrapperPaddingSides);
-	padding-left:var(--wrapperPaddingSides);
-	text-align:center;
+.experience-wrapper {
+	padding-top: 3em;
+	padding-bottom: 3em;
+	padding-right: var(--wrapperPaddingSides);
+	padding-left: var(--wrapperPaddingSides);
+	text-align: center;
 }
-.experience-wrapper h5,h6{
-	margin:0.5em;
+
+.experience-wrapper h5, h6 {
+	margin: 0.5em;
 }
-.experience-wrapper ul.exp-list{
+
+.experience-wrapper ul.exp-list {
 	list-style-type: circle;
 }
-#experience-card{
+
+.experience-tab-wrapper {
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: normal;
+	overflow: auto;
+}
+
+#experience-card {
 	margin: auto;
-	width:50%;
-	padding-top:2em;
-	padding-bottom:3em;
-	padding-right:4em;
-	padding-left:4em;
+	/* padding-top: 2em; */
+	padding-bottom: 3em;
+	padding-right: 4em;
+	padding-left: 4em;
 }
 
-.project-container{
-	display:flex;
-	flex-wrap:wrap;
+.project-container {
+	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
-	align-items:stretch;
-
-	padding-top:3em;
-	padding-bottom:12em;
-	padding-right:var(--wrapperPaddingSides);
-	padding-left:var(--wrapperPaddingSides);
-	text-align:center;
+	align-items: stretch;
+	padding-top: 3em;
+	padding-bottom: 12em;
+	padding-right: var(--wrapperPaddingSides);
+	padding-left: var(--wrapperPaddingSides);
+	text-align: center;
 }
-.project-container .title-wrapper{
+
+.project-container .title-wrapper {
 	flex: 2;
-	flex-basis:100%;
-
-	margin-top:3em;
-	margin-bottom:3em;
-	margin-right:6em;
-	margin-left:6em;
+	flex-basis: 100%;
+	margin-top: 3em;
+	margin-bottom: 3em;
+	margin-right: 6em;
+	margin-left: 6em;
 }
-#project-card{
+
+.project-p-wrapper {
+	margin-bottom: 3em;
+}
+
+#project-card {
 	flex: 1;
-
-	width:50%;
-	min-width:20%;
-
-	padding-top:2em;
-	padding-bottom:3em;
-	padding-right:4em;
-	padding-left:4em;
-	margin:1.5em;
-
+	width: 50%;
+	min-width: 20%;
+	padding-top: 2em;
+	padding-bottom: 3em;
+	padding-right: 4em;
+	padding-left: 4em;
+	margin: 1.5em;
 	position: relative;
 }
-#project-reference{
+
+#project-reference {
 	padding-top: 1em;
 	padding-bottom: 2em;
-	margin-left:auto;
-	margin-right:0;
-
+	margin-left: auto;
+	margin-right: 0;
 	position: absolute;
 	bottom: 0px;
 }
 
-.footer-wrapper{
-	padding-top:1.5em;
-	padding-bottom:1.5em;
+.footer-wrapper {
+	padding-top: 1.5em;
+	padding-bottom: 1.5em;
 	background-color: var(--secondaryColor);
 }
-.footer-wrapper p{
+
+.footer-wrapper p {
 	margin: 0;
-	text-align:center;
+	text-align: center;
 }
